--- a/service/templates/add_port.html
+++ b/service/templates/add_port.html
@@ -58,6 +58,10 @@
             margin-left: 280px;
             width: calc(100% - 280px);
             padding: 30px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
         }
         .form-container {
             background: rgba(10, 15, 30, 0.9);
@@ -81,7 +85,7 @@
             display: block;
             font-size: 16px;
             color: #a3bffa;
-            margin-bottom: 5px;
+            margin/bottom: 5px;
             font-family: 'Exo 2', sans-serif;
         }
         input {
@@ -174,6 +178,7 @@
             .content {
                 margin-left: 0;
                 width: 100%;
+                padding: 15px;
             }
             .form-container {
                 padding: 20px;
@@ -290,3 +295,5 @@
             });
         });
     </script>
+</body>
+</html>
